--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 Hello there, awesome person!
 <html>
+  <head>
   <tittle> Have A good day mei chyi!</tittle>
+  </head>
   <body>
     the content of html shown here
   </body>
