--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Hello there, awesome person!
 <html>
   <head>
-  <tittle>My amazing tittle!!</tittle>
+  <title>My amazing title!!</title>
   </head>
   <body>
     the content of html shown here
