--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Hello there, awesome person!
 <html>
   <head>
-  <title>My amazing title!!</title>
+  <title>My amazing title!</title>
   </head>
   
   <body>
