--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ Hello there, awesome person!
   </head>
   
   <body>
-    the content of html shown here
+    <h1>ALL THE BEST</h1>
   </body>
 </html>
