--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ Hello there, awesome person!
   <li>https://www.youtube.com/watch?v=zfZadurY6c0</li>
   <li>https://to-do.live.com/tasks/id/AQMkADAwATM0MDAAMS1mZgFjLWVjZmUtMDACLTAwCgBGAAADI17qH9YLZkmNkMPM_R_MxQcAZES8fES3Hk62Ua0UfsFU7AAAAgESAAAAZES8fES3Hk62Ua0UfsFU7AAC2UuUYgAAAA==/details</li>
     </ul>
-    <li>(a href="https://www.youtube.com/watch?v=zfZadurY6c0">This is a link to Github!</a></li>
+    <li><a href="https://www.youtube.com/watch?v=zfZadurY6c0">This is a link to Github!</a></li>
   </body>
 </html>
